add buttons and random colors

--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <title>Etch-a-Sketch</title>
   </head>
   <body>
+    <div class="all"></div>
     <div class="container2">
-      <button>Shake Etch-a-Sketch</button>
+      <button class="btn btn-danger">Shake Etch-a-Sketch</button>
+      <div class="footer">
+        <button class="dark" onClick="setColor('Black')">Black</button>
+        <button class="colors" onClick="setColor('random')">Random</button>
+        <button class="white">Reset</button>
+      </div>
     </div>
     <div class="container"> 
 
+  </div>
   </div>
   </body>
   </html>
