--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <div class="footer">
         <button class="dark" onClick="setColor('Black')">Black</button>
         <button class="colors" onClick="setColor('random')">Random</button>
-        <button class="white">Reset</button>
+        <button class="white" onclick="setColor('eraser')">Eraser</button>
+        <button class="reset" onclick="resetBoard()">Reset</button>
       </div>
     </div>
     <div class="container"> 
